--- a/src/app/admin/features/channel_setting/channel/channel.component.html
+++ b/src/app/admin/features/channel_setting/channel/channel.component.html
@@ -67,9 +67,9 @@
                 [enableCellTextSelection]="true">
             </ag-grid-angular>
         </div>
-        <p class="mx-2" style="font-size: smaller;"> <span style="color: blue;font-weight: bold;">Note :</span>Green color shows
+        <!-- <p class="mx-2" style="font-size: smaller;"> <span style="color: blue;font-weight: bold;">Note :</span>Green color shows
             channels are paid
-            channels</p>
+            channels</p> -->
     </div>
 
 </div>
