--- a/src/app/admin/features/channel_setting/Reports/msoreports/msoreports.component.html
+++ b/src/app/admin/features/channel_setting/Reports/msoreports/msoreports.component.html
@@ -14,7 +14,7 @@
         </mat-expansion-panel-header>
         <!-- <h5>PRODUCT HISTORY</h5> -->
         <div class="cardContainer">
-          <div *ngIf="isUser || isReception" class="card royal-card tooltip-container"
+          <div *ngIf="isUser || isReception || isSpecial" class="card royal-card tooltip-container"
             (click)="openMsoDialog('lcoinvoice')"><i class="fas fa-layer-group"></i>
             <div><strong>LCO INVOICE BILL</strong> </div>
             <div class="tooltip">Invoice Bill</div>
@@ -24,11 +24,11 @@
             <div><strong>Recharge/Deduction <br> Report - Including GST</strong> </div>
             <div class="tooltip">Including GST</div>
           </div>
-          <div *ngIf="isUser || isReception" class="card royal-card tooltip-container"
+          <!-- <div *ngIf="isUser || isReception" class="card royal-card tooltip-container"
             (click)="openMsoDialog('recharge_deduction_excluding')"><i class="fas fa-layer-group"></i>
             <div><strong>Recharge/Deduction <br> Report - Excluding GST</strong> </div>
             <div class="tooltip">Excluding GST</div>
-          </div>
+          </div> -->
           <!-- <div class="card royal-card tooltip-container" (click)="openMsoDialog('recharge_invoice')"><i
               class="fas fa-cube"></i>
             <div><strong>Recharge Invoice Report</strong> </div>
@@ -39,8 +39,13 @@
             <div><strong>Recharge History Report</strong> </div>
             <div class="tooltip">Recharge History</div>
           </div>
-          <div *ngIf="(isUser || isReception) && !isshow " class="card royal-card tooltip-container"
+          <div *ngIf="(isUser || isReception ) && !isshow " class="card royal-card tooltip-container"
             (click)="openMsoDialog('online_payment')"><i class="fas fa-file-invoice"></i>
+            <div><strong> Online Payment History</strong> </div>
+            <div class="tooltip">Operator/Subscriber/Sublco Online Payment</div>
+          </div>
+          <div *ngIf="isSpecial " class="card royal-card tooltip-container"
+            (click)="openMsoDialog('online_payment_special')"><i class="fas fa-file-invoice"></i>
             <div><strong> Online Payment History</strong> </div>
             <div class="tooltip">Operator/Subscriber/Sublco Online Payment</div>
           </div>
@@ -50,7 +55,7 @@
           <!-- ------------------------------------------------------------------- -->
           <div *ngIf="isSpecial " class="card royal-card tooltip-container" (click)="openMsoDialog('online_payment')"><i
               class="fas fa-clipboard-list"></i>
-            <div><strong> Online Payment History</strong> </div>
+            <div><strong> EaseBuzz Payment History</strong> </div>
             <div class="tooltip">Operator/Subscriber/Sublco Online Payment</div>
           </div>
           <div *ngIf="role == 'ROLE_OPERATOR' " class="card royal-card tooltip-container"
@@ -68,21 +73,21 @@
             <div><strong> Sublco Offline <br> Payment History</strong> </div>
             <div class="tooltip">Sublco Offline Payment</div>
           </div>
-          <div *ngIf="isUser || isReception" class="card royal-card tooltip-container"
+          <div *ngIf="isUser || isReception || isSpecial" class="card royal-card tooltip-container"
             (click)="openMsoDialog('walletShare')"><i class="fas fa-clipboard-list"></i>
             <div><strong> Wallet Share Report</strong> </div>
             <div class="tooltip">Recharge Invoice</div>
           </div>
-          <div *ngIf="isUser || isReception" class="card royal-card tooltip-container"
+          <div *ngIf="isUser || isReception || isSpecial" class="card royal-card tooltip-container"
             (click)="openMsoDialog('monthly_datewise')"><i class="fas fa-clipboard-list"></i>
             <div><strong>Monthly Datewise <br> Payment Collection Report</strong> </div>
           </div>
 
-          <div *ngIf="isUser || isReception" class="card royal-card tooltip-container"
+          <div *ngIf="isUser || isReception || isSpecial" class="card royal-card tooltip-container"
             (click)="openMsoDialog('subscriber_bill')"><i class="fas fa-clipboard-list"></i>
             <div><strong>Subscriber Bill Report</strong> </div>
           </div>
-          <div *ngIf="isUser || isReception" class="card royal-card tooltip-container"
+          <div *ngIf="isUser || isReception || isSpecial" class="card royal-card tooltip-container"
             (click)="openMsoDialog('user_rechargehistory')"><i class="fas fa-clipboard-list"></i>
             <div><strong>User Recharge History</strong> </div>
           </div>
@@ -95,7 +100,7 @@
       </mat-expansion-panel>
     </mat-accordion>
   </section>
-  <section *ngIf="isUser || isReception">
+  <section *ngIf="isUser || isReception || isSpecial">
     <mat-accordion class="example-headers-align">
       <mat-expansion-panel [expanded]="step() === 0" (opened)="setStep(0)" hideToggle class="pannel">
         <mat-expansion-panel-header>
@@ -126,7 +131,7 @@
       </mat-expansion-panel>
     </mat-accordion>
   </section>
-  <section *ngIf="isUser || isReception">
+  <section *ngIf="isUser || isReception || isSpecial">
     <mat-accordion class="example-headers-align">
       <mat-expansion-panel [expanded]="step() === 0" (opened)="setStep(0)" hideToggle class="pannel">
         <mat-expansion-panel-header>
