--- a/src/app/admin/features/channel_setting/package-creation/package-creation.component.html
+++ b/src/app/admin/features/channel_setting/package-creation/package-creation.component.html
@@ -11,8 +11,7 @@
             <div class="col-12 col-sm-10  align-items-center justify-content-center responsive-container"
                 style="margin: auto;">
 
-                <ag-grid-angular #agGrid id="myGrid" domLayout='autoHeight' class="ag-theme-alpine table-class"
-                    style="max-height: 590px;overflow: scroll;overflow-x: hidden;" rowAnimation
+                <ag-grid-angular #agGrid id="myGrid" domLayout='normal' class="ag-theme-alpine table-class" rowAnimation
                     [gridOptions]="gridOptions" [columnDefs]="columnDefs" [rowData]="rowData"
                     [enableCellTextSelection]="true">
                 </ag-grid-angular>
@@ -25,11 +24,10 @@
     <h4>PACKAGES</h4>
     <div class="row">
         <div class="">
-                 <div class="col-12 col-sm-10  align-items-center justify-content-center responsive-container"
+            <div class="col-12 col-sm-10  align-items-center justify-content-center responsive-container"
                 style="margin: auto;">
 
-                <ag-grid-angular #agGrid id="myGrid" domLayout='autoHeight' class="ag-theme-alpine table-class"
-                    style="max-height: 590px;overflow: scroll;overflow-x: hidden;" rowAnimation
+                <ag-grid-angular #agGrid id="myGrid" domLayout='normal' class="ag-theme-alpine table-class" rowAnimation
                     [gridOptions]="gridOptions" [columnDefs]="columnDefs1" [rowData]="rowData"
                     [enableCellTextSelection]="true">
                 </ag-grid-angular>
