--- a/src/app/admin/features/nav/nav.component.html
+++ b/src/app/admin/features/nav/nav.component.html
@@ -434,12 +434,18 @@
         </li>
         <!-- <li *ngIf="isOperator && distributor"><a (click)="navgetToUrl('/distributor_setting');setActiveLinkTab($event)" -->
 
-        <div *ngIf="distributor">
+        <!-- <div *ngIf="distributor">
             <li *ngIf="isOperator "><a (click)="navgetToUrl('/distributor_setting');setActiveLinkTab($event)"
                     class="nav-link">
                     <i class="bx bx-error-alt bx-sm icon"></i>&nbsp;Distributor Setting</a>
             </li>
-        </div>
+        </div> -->
+        <li *ngIf="distributor && isOperator">
+            <a (click)="navgetToUrl('/distributor_setting'); setActiveLinkTab($event)" class="nav-link">
+              <i class="bx bx-error-alt bx-sm icon"></i>&nbsp;Distributor Setting
+            </a>
+          </li>
+          
         <li *ngIf="isOperator"><a (click)="navgetToUrl('/lcoChangePassword');setActiveLinkTab($event)" class="nav-link">
                 <i class="bx bx-shield-plus bx-sm icon "></i>&nbsp;Change Password</a>
         </li>
