--- a/src/app/admin/features/operator_Login/Dialog/discountdialog/discountdialog.component.html
+++ b/src/app/admin/features/operator_Login/Dialog/discountdialog/discountdialog.component.html
@@ -26,7 +26,7 @@
                 </div>
             </div>
 
-           
+
             <div class="line mb-2">
                 <div class="col-12 d-flex justify-content-center align-items-center">
                     <div class="col-6 d-flex justify-content-start align-items-center">
@@ -43,7 +43,7 @@
                         <span>LCO COMMISSION</span>
                     </div>
                     <div class="col-6">
-                        {{data_details?.lco_commission}}
+                        {{data_details?.new_commission_value}}
                     </div>
                 </div>
 
@@ -55,7 +55,7 @@
                     </div>
                     <div class="col-6">
                         <input type="text" [(ngModel)]="new_customeramount" placeholder="Enter customer amount"
-                        (input)="clearErrorMessage()"  (keypress)="onKeydown($event)">
+                            (input)="clearErrorMessage()" (keypress)="onKeydown($event)">
                         <div *ngIf="errorMessage" class="text-danger">{{ errorMessage }}</div>
                     </div>
                 </div>
@@ -161,7 +161,8 @@
                         <td class="current-amt">{{ plan.currentAmount }}</td>
                         <td>
                             <input type="text" class="discount-input" [(ngModel)]="plan.discount"
-                                (keydown)="updatePlanDiscount(plan, i)" (keypress)="onKeydown($event)">
+                               (keydown)="updatePlanDiscount(plan, i)"
+                                (keypress)="onKeydown($event)">
                         </td>
                         <td class="lco-commission">{{ plan.lcoCommission }}</td>
                     </tr>
@@ -242,7 +243,8 @@
                         <span>WITH GST AMOUNT</span>
                     </div>
                     <div class="col-6 d-flex justify-content-start">
-                        <input type="checkbox" [(ngModel)]="with_Gst" (change)="validateAmount()"  style="width: 20px;height: 20px;">
+                        <input type="checkbox" [(ngModel)]="with_Gst" (change)="validateAmount()"
+                            style="width: 20px;height: 20px;">
                     </div>
                 </div>
             </div>
