--- a/src/app/admin/features/operator_Login/operatordashboard/operatordashboard.component.html
+++ b/src/app/admin/features/operator_Login/operatordashboard/operatordashboard.component.html
@@ -1,12 +1,70 @@
+
+<div class="row" style="padding: 10px;">
+    <div class="col-12 col-md-7 display justify-content-center align-item-center balance gap-3">
+        <div class="col-12 col-lg-4 mb-3 ">
+            <div *ngIf="walletshare" class="card box d-flex flex-column justify-content-between p-3" (click)="addnew()">
+            <!-- <div *ngIf="walletshare" class="card box d-flex flex-column justify-content-between p-3" > -->
+                <div class="d-flex justify-content-around">
+                    <div class="mt-2 mb-3 text-center text1">Current Balance</div>
+                    <i class="fa-solid fa-share forward mt-2 mb-3"></i>
+                </div>
+                <div class="d-flex justify-content-center align-item-center ">
+                    <i class="fa-solid fa-indian-rupee-sign rupee mx-2"></i>
+                    <h5>{{operatorBalance}} </h5>
+                </div>
+            </div>
+            <div *ngIf="!walletshare" class="card box d-flex flex-column justify-content-between p-3">
+                <div class="mt-2 mb-3 text-center text1">Current Balance</div>
+                <div class="d-flex justify-content-center align-item-center ">
+                    <i class="fa-solid fa-indian-rupee-sign rupee mx-2"></i>
+                    <h5>{{operatorBalance}} </h5>
+                </div>
+            </div>
+        </div>
+        <div class="col-12 col-lg-4 mb-3 ">
+            <div class="card d-flex flex-column justify-content-between p-3">
+                <div class="mt-2 mb-3 text-center text1">MSO Recharge</div>
+                <div class="d-flex justify-content-center align-item-center ">
+                    <i class="fa-solid fa-indian-rupee-sign rupee mx-2"></i>
+                    <h5>{{operatorDetailsCount?.todaymsorechargeamount}}</h5>
+                </div>
+            </div>
+        </div>
+        <div class="col-12 col-lg-4 mb-3 ">
+            <div class="card d-flex flex-column justify-content-between p-3">
+                <div class="mt-2 mb-3 text-center text1">Today Recharge</div>
+                <div class="d-flex justify-content-center align-item-center ">
+                    <i class="fa-solid fa-indian-rupee-sign rupee mx-2"></i>
+                    <h5> {{operatorDetailsCount?.todayrechargecount}} </h5>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="col-12 col-md-5 d-flex justify-content-end align-item-center online_recharge">
+        <div class="col-12 col-lg-12  mb-3">
+            <div class="card box d-flex flex-column justify-content-between align-items-center "
+                style="background: linear-gradient(180deg, #c44205, #9c4a01);" (click)="onOnlineRecharge()">
+                <div class="d-flex  w-100" style="justify-content: space-around;align-items: center;height: 100%;">
+                    <span>
+                        <i class="bx bx-bolt-circle" style="font-size: 40px; color: rgb(248, 244, 244);"></i>
+                    </span>
+                    <span class="online">Online Recharge </span>
+                    <span><i class="bx bx-chevron-right-circle" style="color: white;"></i> </span>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 <div class="">
     <div class="row">
         <div class="col-6 col-lg-1-7">
-            <div class="card box d-flex flex-column justify-content-between p-3" (click)="openLCO_Dialog(7)">
+            <div class="card box d-flex flex-column justify-content-between p-3" (click)="openLCO_Dialog(1)">
                 <div class="d-flex justify-content-between w-100">
                     <i class='bx bxs-group'></i>
                     <span class="fw-bold">{{lcoDeatails?.connectioncount}}</span>
                 </div>
-                <div class="mt-2 mb-2 text-center text">Total Subscriber</div>
+                <!-- Subscriber -->
+                <div class="mt-2 mb-2 text-center text">Total Connection</div>
             </div>
         </div>
         <div class="col-6 col-lg-1-7 ">
@@ -15,7 +73,7 @@
                     <i class='bx bxs-user-check'></i>
                     <span class="fw-bold">{{operatorDetailsCount?.activecount}}</span>
                 </div>
-                <div class="mt-2 mb-2 text-center text"> Active Subscriber</div>
+                <div class="mt-2 mb-2 text-center text"> Active </div>
             </div>
         </div>
         <div class="col-6 col-lg-1-7 ">
@@ -24,7 +82,7 @@
                     <i class='bx bxs-user-minus'></i>
                     <span class="fw-bold">{{operatorDetailsCount?.deactivecount}}</span>
                 </div>
-                <div class="mt-2 mb-2 text-center text"> Deactive Subscriber</div>
+                <div class="mt-2 mb-2 text-center text"> Deactive </div>
             </div>
         </div>
         <div class="col-6 col-lg-1-7 ">
@@ -33,7 +91,7 @@
                     <i class='bx bxs-user-plus'></i>
                     <span class="fw-bold">{{operatorDetailsCount?.newsubscribercount}}</span>
                 </div>
-                <div class="mt-2 mb-2 text-center text"> New Subscriber</div>
+                <div class="mt-2 mb-2 text-center text"> New </div>
             </div>
         </div>
         <div class="col-6 col-lg-1-7 ">
@@ -42,7 +100,7 @@
                     <i class='bx bxs-user-x'></i>
                     <span class="fw-bold">{{lcoDeatails?.blockcount}}</span>
                 </div>
-                <div class="mt-2 mb-2 text-center text"> Block Subscriber</div>
+                <div class="mt-2 mb-2 text-center text"> Block </div>
             </div>
         </div>
         <div class="col-6 col-lg-1-7 ">
@@ -52,7 +110,7 @@
                     <!-- <span class="fw-bold">{{lcoDeatails?.expiredcount}}</span> -->
                     <span class="fw-bold">{{operatorDetailsCount?.deactivesubscription}}</span>
                 </div>
-                <div class="mt-2 mb-2 text-center text">Expired Smartcard</div>
+                <div class="mt-2 mb-2 text-center text">Expired</div>
             </div>
         </div>
         <div class="col-6 col-lg-1-7 ">
@@ -62,7 +120,7 @@
                     <!-- <span class="fw-bold">{{lcoDeatails?.activecount}}</span> -->
                     <span class="fw-bold">{{operatorDetailsCount?.activesubscription}}</span>
                 </div>
-                <div class="mt-2 mb-2 text-center text">Not Expired Smartcard</div>
+                <div class="mt-2 mb-2 text-center text">Not Expired</div>
             </div>
         </div>
 
@@ -132,62 +190,7 @@
     </div>
 </div>
 
-<div class="row" style="padding: 10px;">
-    <div class="col-12 col-md-7 display justify-content-center align-item-center balance gap-3">
-        <div class="col-12 col-lg-4 mb-3 ">
-            <div *ngIf="walletshare" class="card box d-flex flex-column justify-content-between p-3" (click)="addnew()">
-            <!-- <div *ngIf="walletshare" class="card box d-flex flex-column justify-content-between p-3" > -->
-                <div class="d-flex justify-content-around">
-                    <div class="mt-2 mb-3 text-center text1">Current Balance</div>
-                    <i class="fa-solid fa-share forward mt-2 mb-3"></i>
-                </div>
-                <div class="d-flex justify-content-center align-item-center ">
-                    <i class="fa-solid fa-indian-rupee-sign rupee mx-2"></i>
-                    <h5>{{operatorBalance}} </h5>
-                </div>
-            </div>
-            <div *ngIf="!walletshare" class="card box d-flex flex-column justify-content-between p-3">
-                <div class="mt-2 mb-3 text-center text1">Current Balance</div>
-                <div class="d-flex justify-content-center align-item-center ">
-                    <i class="fa-solid fa-indian-rupee-sign rupee mx-2"></i>
-                    <h5>{{operatorBalance}} </h5>
-                </div>
-            </div>
-        </div>
-        <div class="col-12 col-lg-4 mb-3 ">
-            <div class="card d-flex flex-column justify-content-between p-3">
-                <div class="mt-2 mb-3 text-center text1">MSO Recharge</div>
-                <div class="d-flex justify-content-center align-item-center ">
-                    <i class="fa-solid fa-indian-rupee-sign rupee mx-2"></i>
-                    <h5>{{operatorDetailsCount?.todaymsorechargeamount}}</h5>
-                </div>
-            </div>
-        </div>
-        <div class="col-12 col-lg-4 mb-3 ">
-            <div class="card d-flex flex-column justify-content-between p-3">
-                <div class="mt-2 mb-3 text-center text1">Today Recharge</div>
-                <div class="d-flex justify-content-center align-item-center ">
-                    <i class="fa-solid fa-indian-rupee-sign rupee mx-2"></i>
-                    <h5> {{operatorDetailsCount?.todayrechargecount}} </h5>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="col-12 col-md-5 d-flex justify-content-end align-item-center online_recharge">
-        <div class="col-12 col-lg-12  mb-3">
-            <div class="card box d-flex flex-column justify-content-between align-items-center "
-                style="background: linear-gradient(180deg, #c44205, #9c4a01);" (click)="onOnlineRecharge()">
-                <div class="d-flex  w-100" style="justify-content: space-around;align-items: center;height: 100%;">
-                    <span>
-                        <i class="bx bx-bolt-circle" style="font-size: 40px; color: rgb(248, 244, 244);"></i>
-                    </span>
-                    <span class="online">Online Recharge </span>
-                    <span><i class="bx bx-chevron-right-circle" style="color: white;"></i> </span>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
+
 <div class="display justify-content-start align-items-center ">
     <div class="col-12 col-md-2 input_box mx-3 mb-3">
         <!-- <input type="date" [(ngModel)]="date" (ngModelChange)="getbar(date)"> -->
