--- a/src/app/admin/features/subscriber/expiry-details/expiry-details.component.html
+++ b/src/app/admin/features/subscriber/expiry-details/expiry-details.component.html
@@ -3,7 +3,7 @@
         Expiry Details
     </h4>
 </div>
-<div class="d-flex justify-content-center align-item-center" style="margin-top: 50px;">
+<div class="d-flex justify-content-center align-item-center mb-3" style="margin-top: 50px;">
     <div class="col-12 col-md-6">
         <div class="card">
             <div class=" display_1  ">
@@ -11,7 +11,6 @@
                     <span style="margin-top: 5%;" for="">Date</span>
                 </div>
                 <div class="col-12 col-md-8">
-
                     <mat-form-field appearance="outline" style="width: 100%;">
                         <mat-date-range-input [rangePicker]="picker" [formGroup]="dateRangeForm">
                             <input matStartDate matInput placeholder="Start date" formControlName="fromdate"
@@ -22,10 +21,8 @@
                         <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
                         <mat-date-range-picker #picker></mat-date-range-picker>
                     </mat-form-field>
-
                 </div>
             </div>
-
             <div *ngIf="role !== 'ROLE_OPERATOR'" class=" display_1  mb-3">
                 <div class="input_box col-12 col-md-4">
                     <span for="">Operator</span>
@@ -40,17 +37,90 @@
                     </select>
                 </div>
             </div>
+            <div class="display_1 justify-content-between align-item-center mb-3">
+                <div class="input_box col-12 col-md-4">
+                    <span for="">Submit</span>
+                </div>
+                <div class="col-12 col-md-8 d-flex justify-content-start align-items-center">
+                    <button class="btn btn-success mx-3 bttn" (click)="Submit()">
+                        Submit
+                    </button>
+                </div>
+            </div>
             <div class="display_1 justify-content-between align-item-center">
                 <div class="input_box col-12 col-md-4">
                     <span for="">Format</span>
                 </div>
                 <div class="col-12 col-md-8 d-flex justify-content-start align-items-center">
-                    <button class="btn btn-success mx-3 bttn" (click)="exportAsXLSX()"><i
+
+                    <div class="export-icon"  (click)="exportAsXLSX()">
+                        <img src="/assets/images/icons/Excel.png" alt="Excel Icon">
+                    </div>
+                    <div class="export-icon" (click)="exportAsXLSX1()">
+                        <img src="/assets/images/icons/Excel.png" alt="Excel Icon">
+                    </div>
+                    <!-- <button class="btn btn-success mx-3 bttn" (click)="exportAsXLSX()"><i
                             class="fa fa-file-excel-o mx-1" aria-hidden="true"></i>FORMAT 1</button>
                     <button class="btn btn-success  bttn" (click)="exportAsXLSX1()"><i class="fa fa-file-excel-o mx-1"
-                            aria-hidden="true"></i>FORMAT 2</button>
+                            aria-hidden="true"></i>FORMAT 2</button> -->
                 </div>
             </div>
         </div>
     </div>
 </div>
+
+<!-- <div class="col-12 col-md-12">
+    <div class="d-flex flex-wrap justify-content-between align-items-center">
+        <div class="col-12 col-md-3 mb-3">
+            <mat-form-field appearance="outline" style="width: 100%;">
+                <mat-date-range-input [rangePicker]="picker" [formGroup]="dateRangeForm">
+                    <input matStartDate matInput placeholder="Start date" formControlName="fromdate"
+                        (dateChange)="getFromDate($event)">
+                    <input matEndDate matInput placeholder="End date" formControlName="todate"
+                        (dateChange)="getToDate($event)">
+                </mat-date-range-input>
+                <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+                <mat-date-range-picker #picker></mat-date-range-picker>
+            </mat-form-field>
+        </div>
+
+        <div *ngIf="role !== 'ROLE_OPERATOR'" class="col-12 col-md-3 mb-3">
+            <mat-form-field appearance="outline" style="width: 100%;">
+                <span for="">Operator</span>
+                <div class="custom-select operator_width mb-2 mx-2">
+                    <select id="operator" [(ngModel)]="operatorname">
+                        <option value="0" selected>ALL Operator</option>
+                        <option *ngFor="let operator of filteredOperators" [value]="operator.id"
+                            (ngModelChange)="selectOperator1($event)">
+                            {{ operator.name }}
+                        </option>
+                    </select>
+                </div>
+            </mat-form-field>
+        </div>
+
+        <div class="col-12 col-md-2 mb-3 d-flex justify-content-start">
+            <button class="btn btn-success mx-3 bttn" (click)="Submit()">
+                <i class="fa fa-file-excel-o mx-1" aria-hidden="true"></i>Submit
+            </button>
+        </div>
+
+        <div class="col-12 col-md-3 mb-3 d-flex justify-content-start">
+            <button class="btn btn-success mx-3 bttn" (click)="exportAsXLSX()">
+                <i class="fa fa-file-excel-o mx-1" aria-hidden="true"></i>FORMAT 1
+            </button>
+            <button class="btn btn-success bttn" (click)="exportAsXLSX1()">
+                <i class="fa fa-file-excel-o mx-1" aria-hidden="true"></i>FORMAT 2
+            </button>
+        </div>
+    </div>
+
+    <ag-grid-angular #agGrid id="myGrid" domLayout="normal" class="ag-theme-alpine table-class" rowAnimation
+        [gridOptions]="gridOptions" [columnDefs]="columnDefs" (gridReady)="onGridReady($event)" [rowData]="rowData"
+        [enableCellTextSelection]="true">
+    </ag-grid-angular>
+</div> -->
+<ag-grid-angular #agGrid id="myGrid" domLayout="normal" class="ag-theme-alpine table-class" rowAnimation
+    [gridOptions]="gridOptions" [columnDefs]="columnDefs" (gridReady)="onGridReady($event)" [rowData]="rowData"
+    [enableCellTextSelection]="true">
+</ag-grid-angular>
