--- a/src/app/admin/features/vc/stc/chipid-model/chipid-model.component.scss
+++ b/src/app/admin/features/vc/stc/chipid-model/chipid-model.component.scss
@@ -5,6 +5,7 @@
     color: white;
     font-weight: 600;
 }
+
 .custom-input {
     width: 100%;
     padding: 0.375rem 0.75rem;
@@ -22,4 +23,14 @@
     border-color: #80bdff;
     outline: 0;
     box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25);
+}
+
+.display {
+    display: flex;
+}
+
+@media screen and (max-width:560px) {
+    .display {
+        display: block;
+    }
 }
